<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/needyitem"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_below="@+id/needyitem"
                android:inputType="number"
                android:hint="@string/hint_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemColor"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemSize"
                android:inputType="number"
                android:layout_below="@+id/itemColor"
                android:hint="@string/hint_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_below="@id/itemSize"
                android:text="@string/save"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/design_default_color_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>